fixed type on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-* { cursor: none !important; }
+* {
+  cursor: none !important;
+}
 
 body {
   background-color: black;
@@ -13,21 +15,22 @@ body {
   font-family: 'Agrandir';
   font-size: 1em;
 }
+
 /* MAIN TEXT DIV */
-.container{
-background-color: white;
-width: 50vw;
-height: 85vh;
-margin: 3vw 3vw 10vw 3vw;
-overflow-y: scroll;
-overflow-x: hidden;
+.container {
+  background-color: white;
+  width: 50vw;
+  height: 85vh;
+  margin: 3vw 3vw 10vw 3vw;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
-.navigation{
+.navigation {
   background-color: black;
   width: 100vw;
   height: 6vh;
-  color:white;
+  color: white;
   font-size: 1em;
   display: grid;
   grid-template-columns: repeat(8, 1fr);
@@ -35,41 +38,41 @@ overflow-x: hidden;
   text-align: center;
   float: left;
   position: fixed;
-  bottom:0;
+  bottom: 0;
   z-index: 100;
-
 }
-.nav_block{
 
-}
-.nav_block a{
+.nav_block {}
+
+.nav_block a {
   font-size: 1em;
-text-decoration: none;
-color: white;
+  text-decoration: none;
+  color: white;
+}
 
+.nav_block a:hover {
+  color: red;
 }
-.nav_block a:hover{
-    color:red;
+
+.nav_block a:active {
+  color: red;
 }
-.nav_block a:active{
-  color:red;
-}
-.nav_block a:visited{
-  color:gray;
+
+.nav_block a:visited {
+  color: gray;
 }
 
 /* DOT STYLE */
 .dot {
-display: none;
+  display: none;
 }
 
 /* DOT DESKTOP STYLE */
-
-.desktop_dot{
-  position:absolute;
+.desktop_dot {
+  position: absolute;
   top: 48vh;
-  left:48vw;
-  transform:translate(-50%,-50%);
+  left: 48vw;
+  transform: translate(-50%, -50%);
   width: 2em;
   height: 2em;
   border-radius: 50%;
@@ -78,61 +81,101 @@ display: none;
   opacity: 0.8;
 }
 
-
-
 /* TYPE STYLES */
-p{
-font-size: 1em;
-margin: 1em;
-margin-right: 30%;
-margin-left: 3em;
-}
-h1{
-font-family: 'Grafier';
-font-size: 2em;
-color: #f20000;
-margin-left: 3em;
-margin-bottom: 2em;
-
-}
-h2{
-font-family: 'Grafier';
-font-size: 1.5em;
-color: #f20000;
-margin-left: 3em;
-margin-bottom: 2em;
+p {
+  font-size: 1em;
+  margin: 1em;
+  margin-right: 30%;
+  margin-left: 3em;
 }
 
+h1 {
+  font-family: 'Grafier';
+  font-size: 2em;
+  color: #f20000;
+  margin-left: 3em;
+  margin-bottom: 2em;
+}
 
-  @font-face {
+h2 {
+  font-family: 'Grafier';
+  font-size: 1.5em;
+  color: #f20000;
+  margin-left: 3em;
+  margin-bottom: 2em;
+}
+
+@font-face {
   font-family: 'Agrandir';
   src:
-       url('Agrandir-Regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('Agrandir-Regular.woff') format('woff'), /* Pretty Modern Browsers */
-
+    url('Agrandir-Regular.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('Agrandir-Regular.woff') format('woff'),
+    /* Pretty Modern Browsers */
+    url('Agrandir-Regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */
 }
+
 @font-face {
-font-family: 'Grafier';
-src:
-     url('Grafier-BoldDisplay.woff2') format('woff2'), /* Super Modern Browsers */
-     url('Grafier-BoldDisplay.woff') format('woff'), /* Pretty Modern Browsers */
-
+  font-family: 'Grafier';
+  src:
+    url('Grafier-BoldDisplay.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('Grafier-BoldDisplay.woff') format('woff'),
+    /* Pretty Modern Browsers */
+    url('Grafier-BoldDisplay.ttf') format('truetype'),
+    /* Safari, Android, iOS */
 }
 
+button{
+  text-decoration: underline;
+  color: red;
+    text-transform: none;
+    text-shadow: none;
+    display: inline-block;
+    text-align: left;
+    align-items: flex-start;
+    cursor: default;
+    box-sizing: none;
+    margin: 0em;
+    font-family: 'Agrandir';
+    font-size: inherit;
+    padding: none;
+    border: none;
+    background-color: transparent;
+}
+button:hover:active:after:before{
+  text-decoration: underline;
+  color: red;
+  border: none;
+}
 
+#no_footnote{
+}
+.no_footnote{display: none;}
+.footnote{
+  display: inline-block;
+  width:100%;
+  height: auto;
+  background-color: red;
+  color: white;
+  font-family: 'Agrandir';
+  font-size: 1em;
+}
 
 /* FOR MOBILE */
-
-@media only screen and (max-width: 1024px){
-  .container{
+@media only screen and (max-width: 1024px) {
+  .container {
     width: 90vw;
     height: 90vh;
   }
-  .navigation{
+
+  .navigation {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 2.5vh);
   }
+
   .dot {
     width: 2em;
     height: 2em;
@@ -142,30 +185,40 @@ src:
     z-index: 200;
     opacity: 0.8;
   }
-.desktop_dot{
-  display: none;
-}
-  p{
 
-margin: 0.5em;
+  .desktop_dot {
+    display: none;
   }
-  h1,h2{
-margin: 0.5em;
+
+  p {
+    margin: 0.5em;
+  }
+
+  h1, h2 {
+    margin: 0.5em;
   }
 }
 
 /* IDs for navigation */
-#title{}
-  #abstract{}
-    #intro{}
-      #chapter1{}
-        #chapter2{}
-          #conclusion{}
-            #bibliography{}
-              #colophon{}
-                #circle{}
+#title {}
 
-                  /* width */
+#abstract {}
+
+#intro {}
+
+#chapter1 {}
+
+#chapter2 {}
+
+#conclusion {}
+
+#bibliography {}
+
+#colophon {}
+
+#circle {}
+
+/* width */
 ::-webkit-scrollbar {
   width: 10px;
 }
